--- a/style.css
+++ b/style.css
@@ -17,9 +17,10 @@ header {
     padding: 10px;
 }
 
-header .logo h1 {
-    margin-left: 20px;
-    font-size: 24px;
+header .logo img {
+    max-height: 60px;  /* Pas de hoogte aan naar wens */
+    width: auto;  /* Behoudt de proporties van de afbeelding */
+    margin-left: 20px; /* Margin links voor wat ruimte */
 }
 
 nav ul {
