--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ header {
 }
 
 header .logo img {
-    max-height: 60px;  /* Pas de hoogte aan naar wens */
-    width: auto;  /* Behoudt de proporties van de afbeelding */
-    margin-left: 20px; /* Margin links voor wat ruimte */
+    max-height: 60px;
+    width: auto;
+    margin-left: 20px;
 }
 
 nav ul {
@@ -46,6 +46,7 @@ nav ul li a {
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: none; /* Verbergen van secties die niet zichtbaar moeten zijn */
 }
 
 h2 {
@@ -60,40 +61,9 @@ ul li {
     margin-bottom: 10px;
 }
 
-/* Formulier styling */
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-label {
-    margin-top: 10px;
-}
-
-input, textarea {
-    padding: 10px;
-    margin-top: 5px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-textarea {
-    resize: vertical;
-}
-
-button {
-    padding: 10px;
-    background-color: #333;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    margin-top: 10px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #555;
+/* Styling voor actieve sectie */
+.section.active {
+    display: block; /* Alleen de actieve sectie is zichtbaar */
 }
 
 /* Footer styling */
