--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ nav ul li a {
     font-size: 18px;
 }
 
-/* Section styling */
+/* Sectie styling */
 .section {
     padding: 20px;
     margin: 20px;
