--- a/style.css
+++ b/style.css
@@ -11,69 +11,61 @@ header {
     background-color: #333;
     color: white;
     padding: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
+    text-align: center;
 }
 
 header .logo img {
-    max-height: 60px;
-    width: auto;
-    margin-left: 20px;
+    width: 100px;
 }
 
 nav ul {
     list-style: none;
-    display: flex;
-    margin-right: 20px;
+    padding: 0;
 }
 
 nav ul li {
-    margin-left: 15px;
+    display: inline;
+    margin-right: 20px;
 }
 
 nav ul li a {
     color: white;
     text-decoration: none;
-    font-size: 18px;
 }
 
-/* Sectie styling */
-.section {
+/* Regels sectie */
+#rules {
     padding: 20px;
-    margin: 20px;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    display: none; /* Verbergen van secties die niet zichtbaar moeten zijn */
-}
-
-h2 {
-    color: #333;
-}
-
-ul {
-    list-style-type: none;
-}
-
-ul li {
-    margin-bottom: 10px;
-}
-
-h3 {
-    color: #444;
-}
-
-/* Styling voor actieve sectie */
-.section.active {
-    display: block; /* Alleen de actieve sectie is zichtbaar */
-}
-
-/* Footer styling */
-footer {
     text-align: center;
-    padding: 20px;
+}
+
+.tabcontent {
+    display: none;
+    text-align: left;
+    margin-top: 20px;
+}
+
+.tablinks {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
+    margin: 0 10px;
+}
+
+.tablinks:hover {
+    background-color: #45a049;
+}
+
+/* Footer */
+footer {
     background-color: #333;
     color: white;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
