--- a/style.css
+++ b/style.css
@@ -1,37 +1,76 @@
-/* Zorg ervoor dat de body en html de volledige hoogte hebben en een achtergrondkleur krijgen */
-html, body {
-    height: 100%;
-    margin: 0;
+/* Algemene stijlen voor de pagina */
+body {
     font-family: Arial, sans-serif;
-    background-image: url('b.png');  /* Aangepaste achtergrondafbeelding */
-    background-size: cover;         /* Zorgt ervoor dat de afbeelding de volledige pagina bedekt */
-    background-position: center;    /* Zorgt ervoor dat de afbeelding gecentreerd wordt */
+    background: url('b.png') no-repeat center center fixed;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+    color: #fff;
 }
 
-/* De container moet de resterende ruimte vullen en zorgt ervoor dat de footer altijd onderaan komt */
-.container {
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
+header {
+    background: rgba(0, 0, 0, 0.7);
+    padding: 10px 0;
+    text-align: center;
 }
 
-/* Main inhoud wordt uitgerekt zodat de footer altijd onderaan komt */
-main {
-    flex-grow: 1;
+header .logo img {
+    max-width: 100px;
 }
 
-/* Footer wordt altijd aan de onderkant van de pagina gepositioneerd */
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
 footer {
-    background-color: #222; /* Achtergrondkleur van de footer */
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.7);
     color: #fff;
     text-align: center;
     padding: 10px;
-    position: relative;
-    bottom: 0;
-    width: 100%;
 }
 
-/* Footer tekst */
-footer p {
-    margin: 0;
+/* Paginatitel stijlen */
+.page-title {
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #fff;
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+
+/* Container voor de hoofdinhoud */
+.container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+h2, h3 {
+    font-size: 1.8rem;
+    color: #fff;
+}
+
+ul {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+ul li {
+    margin-bottom: 10px;
 }
