--- a/style.css
+++ b/style.css
@@ -49,6 +49,15 @@ nav ul li a {
     margin-bottom: 30px;
 }
 
+/* Sectie Titels Styling */
+.section-title {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #ffcc00; /* Gele kleur voor sectietitels */
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
 /* Hoofdsectie Styling */
 .container {
     width: 80%;
